# WIME-Editor-CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  COMPONENTS.md  ROADMAP.md
include/: BinaryFile.h  ConsoleWindow.h  EditorSettings.h  EditorUI.h  FileDialog.h  FileFormat.h  Game.h  GameInfoWindow.h  PreviewWindow.h  PropertiesWindow.h  ResourceBrowserWindow.h  ResourceIndex.h  ResourceLoader.h  ResourceViewers.h
src/: BinaryFile.cpp  ConsoleWindow.cpp  EditorSettings.cpp  EditorUI.cpp  FileDialog.cpp  Game.cpp  GameInfoWindow.cpp  PreviewWindow.cpp  PropertiesWindow.cpp  ResourceBrowserWindow.cpp  ResourceLoader.cpp  ResourceViewers.cpp
